Fixed font display size on iphone 4/5c.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,15 +24,6 @@ p {
   font-style: bold;
 }
 
-.navbar {
-  font-family: 'Bitter', serif;
-  color: #a7a9ac;
-  background-color: #FFFFFF;
-  border-color: #FFFFFF;
-  font-size: 18px;
-  font-weight: 900;
-}
-
 h3 {
   font-weight: 700;
 }
